--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -4,7 +4,7 @@ $font-size: 1.8rem !default
 $line-height: 3.0rem/$font-size !default
 $space-bottom: $font-size * $line-height !default
 
-$color-bg: #f8ecc2 !default
+$color-bg: white !default
 $color-text: #262626 !default
 $color-text-alt: tomato !default
 $color-link: blue !default
@@ -18,6 +18,9 @@ $user-content: content !default
 // layout
 $layout-width: 1920px !default
 $layout-space-horizontal: 0 !default
+
+// sidebars
+$sidebar-left-width: 320px !default
 
 // form
 $color-form-text: #262626 !default
