--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -9,7 +9,7 @@ $color-text: #262626 !default
 $color-text-alt: tomato !default
 $color-link: blue !default
 $color-title: black !default
-$color-border: lightgray !default
+$color-border: #d9d9d9 !default
 $color-text-mark: tomato !default
 
 // user content class
@@ -18,6 +18,7 @@ $user-content: content !default
 // layout
 $layout-width: 1920px !default
 $layout-space-horizontal: 0 !default
+$layout-grid-space: 100px !default
 
 // sidebars
 $sidebar-left-width: 320px !default
