--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -5,9 +5,9 @@ $line-height: 3.0rem/$font-size !default
 $space-bottom: $font-size * $line-height !default
 
 $color-bg: white !default
-$color-text: #262626 !default
+$color-text: black !default
 $color-text-alt: tomato !default
-$color-link: blue !default
+$color-link: #019875 !default
 $color-title: black !default
 $color-border: #d9d9d9 !default
 $color-text-mark: tomato !default
