--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -3,7 +3,7 @@
 // =============================================================================
 // Google Fonts
 // =============================================================================
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif:700|Open+Sans:300,300i,600,700,700i')
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif:700|Open+Sans:300,300i,600,700,700i&subset=cyrillic')
 //font-family: 'Noto Serif', serif
 //font-family: 'Open Sans', sans-serif
 
