--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -40,34 +40,13 @@
 	overflow-x: hidden
 	overflow-y: auto
 
-	&__holder
-		min-height: 100%
-		position: relative
-		z-index: 1
-		+linear-gradient(to right, #019875 0%, #108982 44%, #2e6b9c 100%)
-
-		&:before
-			content: ''
-			position: absolute
-			left: 0
-			top: 0
-			right: 0
-			bottom: 0
-			background: url(../img/frame-mask.png)
-			z-index: -1
-
-	&__photo
-		position: absolute
-		right: 50px
-		bottom: 0
-
 .page
 
 	.frame + &
 		margin-left: 640px
 
 .main
-	padding: 30px 0 130px
+	padding: 0
 	position: relative
 	clear: both
 	z-index: 4
@@ -116,13 +95,122 @@
 
 /*MAIN BLOCKS end*/
 
+/*FRAME*/
+.frame
+
+	&__holder
+		min-height: 100%
+		position: relative
+		z-index: 1
+		+linear-gradient(to right, #019875 0%, #108982 44%, #2e6b9c 100%)
+
+		&:before
+			content: ''
+			position: absolute
+			left: 0
+			top: 0
+			right: 0
+			bottom: 0
+			background: url(../img/frame-mask.png)
+			z-index: -1
+
+	&__photo
+		position: absolute
+		right: 50px
+		bottom: 0
+		max-height: 80vh
+		overflow: hidden
+
+/*FRAME end*/
+
 /*HEADER*/
 .header
 	border-bottom: 1px solid $color-border
 
 	&__holder
-		padding: 10px 0
+		position: relative
 		+clear
+
+/*main navigation*/
+.nav
+	padding: 35px 0
+
+	&__list
+		margin: 0 -15px
+		font-size: 0
+		letter-spacing: -4px
+
+		li
+			display: inline-block
+			margin: 0 15px
+			font-size: 14px
+			line-height: 1.5
+			letter-spacing: normal
+
+		a
+			display: inline-block
+			text-decoration: none
+			vertical-align: top
+			+font-bold
+			letter-spacing: 0.1em
+			text-transform: uppercase
+			color: #000
+
+		.no-touchevents & a:hover, .no-touchevents & li.current a, li.current a
+			color: $color-link
+
+/*main navigation end*/
+
+/*search*/
+.btn-search
+	position: absolute
+	right: -14px
+	top: 50%
+	width: 40px
+	height: 40px
+	transform: translate(0, -50%)
+
+	span
+		+hide-text
+
+	i
+		position: absolute
+		left: 50%
+		top: 50%
+		width: 12px
+		height: 12px
+		z-index: 2
+		pointer-events: none
+		transform: translate(-50%, -50%)
+
+	i:before, i:after
+		content: ''
+		position: absolute
+		background-color: black
+		border: 2px solid black
+		transition-property: background-color, border-color, transform
+		transition-duration: $animation-speed
+
+	i:before
+		left: 0
+		top: 0
+		width: 10px
+		height: 10px
+		border-radius: 5px
+		background: none
+
+	i:after
+		bottom: 0
+		right: 0
+		height: 2px
+		width: 6px
+		border-radius: 2px
+		border: none
+		transform-origin: right bottom
+		transform: rotate(38deg)
+
+
+/*search end*/
 
 /*HEADER end*/
 
@@ -134,8 +222,7 @@
 	color: #000
 	margin: 0 0 20px
 
-	&__list,
-	.#{$user-content} &__list
+	&__list, .#{$user-content} &__list
 		overflow: hidden
 		list-style: none
 		padding: 0
