--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -9,61 +9,60 @@ body
 	font-size: $font-size
 	line-height: $line-height
 	height: 100%
-	color: $color-text
-	background-color: $color-bg
+	color: $text-color
+	background-color: $bg-color
 	min-width: 320px
 
 h1, h2, h3, h4, h5, h6
 	margin: 0
 	padding: 0
 	+font-title
-	color: $color-title
+	color: $title-color
 
 h1
-	font-size: 4.0rem
-	line-height: 1.2
-	margin-bottom: $space-bottom
-	overflow: hidden
+	font-size: 3.6rem
+	line-height: 1.4
+	margin-bottom: $bottom-space
 
 h2
-	font-size: 3.6rem
+	font-size: 3.2rem
 	line-height: 1.2
-	margin-bottom: $space-bottom
+	margin-bottom: $bottom-space
 
 h3
-	font-size: 2.8rem
+	font-size: 2.6rem
 	line-height: 1.2
-	margin-bottom: $space-bottom
+	margin-bottom: $bottom-space
 
 h4
-	font-size: 2.2rem
-	line-height: 1.2
-	margin-bottom: $space-bottom
-
-h5
 	font-size: 2.0rem
 	line-height: 1.2
-	margin-bottom: $space-bottom
+	margin-bottom: $bottom-space
+
+h5
+	font-size: 1.8rem
+	line-height: 1.2
+	margin-bottom: $bottom-space
 
 h6
 	font-size: $font-size
 	line-height: $line-height
-	margin-bottom: $space-bottom
+	margin-bottom: $bottom-space
 
 p
 	padding: 0
-	margin: 0 0 $space-bottom
+	margin: 0 0 $bottom-space
 
 hr
 	line-height: 1px
 	height: 0
 	border: none
 	background: none
-	border-bottom: 1px solid $color-border
-	margin-bottom: $space-bottom
+	border-bottom: 1px solid $border-color
+	margin-bottom: $bottom-space
 
 a
-	color: $color-link
+	color: $link-color
 	text-decoration: underline
 	cursor: default
 	outline: none
@@ -100,12 +99,12 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	+font-bold-italic
 
 .mark
-	color: $color-text-mark
+	color: $mark-color
 	font-style: inherit
 	font-weight: inherit
 
 .text-color-alt
-	color: $color-text-alt
+	color: $text-color-alt
 
 .align-center
 	text-align: center
@@ -190,7 +189,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 /*list*/
 .#{$user-content}
 	ul, ol
-		margin: $space-bottom 0
+		margin: $bottom-space 0
 		//padding: 0 0 $space-bottom
 		padding: 0
 		list-style: none
@@ -198,7 +197,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	ul li, ol li
 		//padding: $space-bottom/2 0 0 30px
 		padding-left: 30px
-		margin: #{$space-bottom/2} 0
+		margin: #{$bottom-space/2} 0
 		position: relative
 
 	//ul li:first-child,
@@ -215,7 +214,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		width: 0
 		border: solid transparent
 		border-width: 5px 9px
-		border-left-color: $color-text-mark
+		border-left-color: $text-color-alt
 		box-sizing: border-box
 
 	//ul > li:first-child:before
@@ -234,7 +233,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 			display: inline-block
 			text-align: left
 			+font-title
-			color: $color-text-mark
+			color: $mark-color
 			content: counter(section)
 			padding: 0 4px 0 0
 			min-width: 30px
@@ -247,7 +246,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	ol ul
 		//padding-bottom: 0
 		//padding-left: 20px
-		margin: $space-bottom/2 0
+		margin: $bottom-space/2 0
 
 	//ul ul > li:before,
 	//ul ul > li:first-child:before,
@@ -293,7 +292,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	overflow: auto
 	max-width: 100%
 	-webkit-overflow-scrolling: touch
-	margin: 0 0 $space-bottom
+	margin: 0 0 $bottom-space
 
 	table
 		margin-bottom: 0
@@ -315,7 +314,7 @@ table
 
 .#{$user-content}
 	table
-		margin-bottom: $space-bottom
+		margin-bottom: $bottom-space
 
 	.table-auto table
 		margin-bottom: 0
@@ -367,7 +366,7 @@ table
 		display: block
 		margin: 0
 		background-color: #f5f5f5
-		border-left: 4px solid $color-text-alt
+		border-left: 4px solid $text-color-alt
 		padding: 18px 32px 28px 42px
 
 		q
@@ -376,7 +375,7 @@ table
 			padding: 0 0 10px
 			font-size: $font-size
 			line-height: $line-height
-			color: $color-text
+			color: $text-color
 
 			&:before, &:after
 				content: ''
@@ -403,26 +402,26 @@ table
 			font-style: normal
 			font-size: $font-size
 			line-height: $line-height
-			color: $color-text
+			color: $text-color
 
 /*blockquote end*/
 
 /*content img*/
 .imgc
 	text-align: center
-	padding-bottom: $space-bottom
+	padding-bottom: $bottom-space
 	clear: both
 
 .imgl
 	text-align: left
 	float: left
-	margin: 0 $space-bottom $space-bottom 0
+	margin: 0 $bottom-space $bottom-space 0
 	max-width: 50%
 
 .imgr
 	text-align: right
 	float: right
-	margin: 0 0 $space-bottom $space-bottom
+	margin: 0 0 $bottom-space $bottom-space
 	max-width: 50%
 
 @media only screen and (max-width: 767px)
@@ -466,12 +465,12 @@ table
 .label-holder, label
 	font-size: inherit
 	line-height: inherit
-	color: $color-text
+	color: $text-color
 
 .form-mark
 	display: inline-block
 	vertical-align: top
-	color: $color-text-alt
+	color: $text-color-alt
 
 /*form layout end*/
 
@@ -628,7 +627,7 @@ input[type="checkbox"] + label:before, .check-label > span > i:before
 	top: 50%
 	margin-top: -9px
 	border-radius: 0
-	border: 1px solid $color-text-alt
+	border: 1px solid $text-color-alt
 	box-sizing: border-box
 
 input[type="checkbox"] + label > span, input[type="radio"] + label > span, input[type="checkbox"] + span, input[type="radio"] + span
@@ -669,7 +668,7 @@ input[type="checkbox"]
 		left: 0
 		top: 50%
 		border-radius: 2px
-		background: $color-text-alt
+		background: $text-color-alt
 		-webkit-transition-property: opacity
 		transition-property: opacity
 		-webkit-transition-duration: $animation-speed
@@ -740,7 +739,7 @@ input[type="radio"]
 		top: 50%
 		margin-top: -9px
 		border-radius: 50px
-		border: 1px solid $color-text-alt
+		border: 1px solid $text-color-alt
 		box-sizing: border-box
 
 	& + label:after, & + span:after
@@ -768,7 +767,7 @@ input[type="radio"]
 		margin-top: -5px
 		border-radius: 50%
 		overflow: hidden
-		background: $color-text-alt
+		background: $text-color-alt
 		-webkit-animation: bounceout 0s
 		-webkit-animation-iteration-count: 1
 		-webkit-animation-fill-mode: forwards
