--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,16 +1,25 @@
 // Default Variables and Maps
+// medium query
+$mq-desk-lg: 1919px
+$mq-desk-md: 1599px
+$mq-desk-sm: 1279px
+$mq-tablet: 991px
+$mq-mobile-lg: 767px
+$mq-mobile-md: 639px
+$mq-mobile-sm: 479px
+
 // base
 $font-size: 1.8rem !default
 $line-height: 3.0rem/$font-size !default
-$space-bottom: $font-size * $line-height !default
+$bottom-space: $font-size * $line-height !default
 
-$color-bg: white !default
-$color-text: black !default
-$color-text-alt: tomato !default
-$color-link: #019875 !default
-$color-title: black !default
-$color-border: #d9d9d9 !default
-$color-text-mark: tomato !default
+$bg-color: white !default
+$text-color: black !default
+$text-color-alt: #019875 !default
+$link-color: #019875 !default
+$title-color: black !default
+$border-color: #d9d9d9 !default
+$mark-color: tomato !default
 
 // user content class
 $user-content: content !default
@@ -77,5 +86,5 @@ $font-alt: 'Noto Serif', serif !default
 
 =font-title()
 	font:
-		family: $font-alt
-		weight: 700
+		family: $font-norm
+		weight: 300
