--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -15,6 +15,7 @@ $bottom-space: $font-size * $line-height !default
 
 $bg-color: white !default
 $text-color: black !default
+$text-color-light: #808080 !default
 $text-color-alt: #019875 !default
 $link-color: #019875 !default
 $title-color: black !default
