--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -33,18 +33,6 @@
 .cross
 	min-height: 100vh
 
-.frame
-	position: fixed
-	height: 100vh
-	width: 640px
-	overflow-x: hidden
-	overflow-y: auto
-
-.page
-
-	.frame + &
-		margin-left: 640px
-
 .main
 	padding: 45px 0 0
 	position: relative
@@ -77,7 +65,6 @@
 	margin: 0 0 0 -100%
 	width: $sidebar-left-width
 	padding-left: $layout-grid-space
-	background: lightgray
 
 .footer
 	height: 0
@@ -114,12 +101,25 @@
 
 /*WIDGETS end*/
 
-/*FRAME*/
-.frame
+/*ENTRY*/
+.entry
+	position: fixed
+	height: 100vh
+	width: 640px
+	overflow-x: hidden
+	overflow-y: auto
+	color: #fff
+
+	@media only screen and (max-width: $mq-desk-lg)
+		//width: 400px
+
+	a
+		text-decoration: none
+		color: #fff
 
 	&__holder
-		min-height: 100%
 		position: relative
+		min-height: 100vh
 		z-index: 1
 		+linear-gradient(to right, #019875 0%, #108982 44%, #2e6b9c 100%)
 
@@ -133,14 +133,96 @@
 			background: url(../img/frame-mask.png)
 			z-index: -1
 
-	&__photo
+	&__img
 		position: absolute
 		right: 50px
 		bottom: 0
-		max-height: 80vh
+		max-height: 90vh
+		width: 66%
 		overflow: hidden
+		z-index: -1
 
-/*FRAME end*/
+		&:before
+			content: ''
+			display: block
+			height: 0
+			padding-top: 143%
+
+		img
+			position: absolute
+			left: 0
+			top: 0
+			height: 100%
+			width: 100%
+			object-fit: contain
+
+	&__frame
+		position: absolute
+		left: 100px
+		right: 100px
+		bottom: 60px
+		top: 60px
+		z-index: 1
+
+	&__logo
+		font-family: $font-alt
+		font-weight: 700
+		font-size: 3.0rem
+		line-height: 1.4
+		margin-bottom: 1em
+
+	&__title
+		margin-bottom: 2em
+
+	&__message
+		font-size: 1.4rem
+		line-height: 1.5
+		+font-bold
+		text-transform: uppercase
+		letter-spacing: 0.1em
+		margin-bottom: 2em
+
+		a
+			color: #fff
+
+			span
+				display: inline-block
+				line-height: 1.2
+				border-bottom: 2px solid #fff
+				transition-property: border-color
+				transition-duration: $animation-speed
+
+			.no-touchevents &:hover span
+				border-bottom-color: transparent
+
+	&__copyright
+		font-size: 1.6rem
+		line-height: 1.875
+
+		.nobr
+			display: block
+
+	&__contacts
+		right: 0
+		font-size: 1.6rem
+		line-height: 1.875
+		text-align: right
+		z-index: 1
+
+	&__copyright, &__contacts
+		position: absolute
+		bottom: 0
+
+.page
+	position: relative
+
+	.entry + &
+		margin-left: 640px
+
+		@media only screen and (max-width: $mq-desk-lg)
+			//margin-left: 400px
+
+/*ENTRY end*/
 
 /*HEADER*/
 .header
@@ -161,7 +243,7 @@
 
 		li
 			display: inline-block
-			margin: 0 15px
+			margin: 0 1.8%
 			font-size: 14px
 			line-height: 1.5
 			letter-spacing: normal
@@ -245,8 +327,7 @@
 /*breadcrumbs*/
 .breadcrumbs
 	font-size: 1.6rem
-	line-height: 1.4
-	color: #999
+	color: $text-color-light
 	margin: 0 0 20px
 
 	$bc-color-link: black
@@ -275,9 +356,10 @@
 				content: '/'
 				position: absolute
 				right: 10px
-				top: 0
+				top: 1px
 				height: 0
 				width: 0
+				line-height: 1.2
 				border: none
 				color: $text-color-alt
 
@@ -318,14 +400,14 @@
 .years
 	margin-bottom: $bottom-space
 	border: 1px solid $border-color
-	padding: 19px 55px
+	padding: 0 55px
 	position: relative
 
 	&__list, .#{$user-content} &__list
 		margin: 0
 
 		li
-			padding: 0
+			padding: 19px 0
 			margin: 0
 
 			&:before
@@ -476,10 +558,76 @@
 /*MAIN end*/
 
 /*SIDEBAR*/
-/*SIDEBAR end*/
+.sidebar
+	&__holder
+		position: relative
 
-/*ASIDE*/
-/*ASIDE end*/
+/*menu*/
+.menu
+	margin: -20px
+	font-size: 1.6rem
+	line-height: 1.5
+
+	&__list
+
+		li
+			padding-bottom: 1px
+
+			.no-touchevents &.current, &.current
+				a
+					color: transparent
+					transition-delay: $animation-speed - 0.07s
+
+			.no-touchevents.loaded &.current, .loaded &.current
+				a
+					color: white
+
+					&:before
+						opacity: 1
+						visibility: visible
+						transform: scale(1)
+
+			ul
+				position: relative
+
+				a
+					padding-left: 50px
+					color: $text-color-light
+
+		a
+			display: block
+			position: relative
+			padding: 14px 20px
+			text-decoration: none
+			color: $text-color
+			transition-property: color
+			transition-duration: $animation-speed
+			z-index: 1
+
+			&:before
+				content: ''
+				position: absolute
+				left: 0
+				top: 0
+				height: 100%
+				width: 100%
+				pointer-events: none
+				opacity: 0
+				visibility: hidden
+				transform: scale(0.8)
+				transition-property: opacity, visibility, transform
+				transition-duration: $animation-speed
+				transition-timing-function: ease-in-out
+				+linear-gradient(to right, #019875, #9800f9)
+				z-index: -1
+
+			.no-touchevents &:hover
+				color: $text-color-alt
+
+
+/*menu end*/
+
+/*SIDEBAR end*/
 
 /*FOOTER*/
 .footer
