--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -10,8 +10,8 @@ body
 	line-height: $line-height
 	height: 100%
 	color: $text-color
-	background-color: $bg-color
-	min-width: 320px
+	min-width: $mq-tablet
+	background: $bg-color url(../img/empty.png) no-repeat fixed
 
 h1, h2, h3, h4, h5, h6
 	margin: 0
