--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -2,7 +2,7 @@
 // medium query
 $mq-desk-lg: 1919px
 $mq-desk-md: 1599px
-$mq-desk-sm: 1279px
+$mq-desk-sm: 1199px
 $mq-tablet: 991px
 $mq-mobile-lg: 767px
 $mq-mobile-md: 639px
@@ -27,8 +27,13 @@ $user-content: content !default
 
 // layout
 $layout-width: 1920px !default
+$layout-width-small: 1279px !default
 $layout-space-horizontal: 0 !default
 $layout-grid-space: 100px !default
+
+// header height
+$header-height: 92px !default
+$header-height-small: 72px !default
 
 // sidebars
 $sidebar-left-width: 320px !default
