--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -27,9 +27,12 @@ $user-content: content !default
 
 // layout
 $layout-width: 1920px !default
-$layout-width-small: 1279px !default
 $layout-space-horizontal: 0 !default
 $layout-grid-space: 100px !default
+
+// entry
+$entry-max-width: 640px !default
+$entry-max-width-home: 960px !default
 
 // header height
 $header-height: 92px !default
